scorecard and execution flow fixes

--- a/app/src/main/res/layout-large/activity_score.xml
+++ b/app/src/main/res/layout-large/activity_score.xml
@@ -494,6 +494,7 @@
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:textSize="20sp"
+                                android:background="@drawable/spin_bg"
                                 android:textColor="@android:color/black"
                                 android:text="Section"/>
 
@@ -504,38 +505,26 @@
                                 android:layout_marginEnd="2dp"
                                 android:background="#000000" />
 
-
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:textSize="20sp"
+                                android:background="@drawable/spin_bg"
                                 android:textColor="@android:color/black"
                                 android:text="No.of Q"/>
 
-                            <View
-                                android:layout_width="2dp"
-                                android:layout_height="match_parent"
-                                android:layout_marginStart="2dp"
-                                android:layout_marginEnd="2dp"
-                                android:background="#000000" />
-
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:textSize="20sp"
+                                android:background="@drawable/spin_bg"
                                 android:textColor="@android:color/black"
                                 android:text="Attempt"/>
 
-                            <View
-                                android:layout_width="2dp"
-                                android:layout_height="match_parent"
-                                android:layout_marginStart="2dp"
-                                android:layout_marginEnd="2dp"
-                                android:background="#000000" />
 
                             <TextView
                                 android:layout_width="match_parent"
@@ -543,15 +532,10 @@
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:textSize="20sp"
+                                android:background="@drawable/spin_bg"
                                 android:textColor="@android:color/black"
                                 android:text="Skipped"/>
 
-                            <View
-                                android:layout_width="2dp"
-                                android:layout_height="match_parent"
-                                android:layout_marginStart="2dp"
-                                android:layout_marginEnd="2dp"
-                                android:background="#000000" />
 
                             <TextView
                                 android:layout_width="match_parent"
@@ -559,15 +543,10 @@
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:textSize="20sp"
+                                android:background="@drawable/spin_bg"
                                 android:textColor="@android:color/black"
                                 android:text="Correct"/>
 
-                            <View
-                                android:layout_width="2dp"
-                                android:layout_height="match_parent"
-                                android:layout_marginStart="2dp"
-                                android:layout_marginEnd="2dp"
-                                android:background="#000000" />
 
                             <TextView
                                 android:layout_width="match_parent"
@@ -575,15 +554,10 @@
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:textSize="20sp"
+                                android:background="@drawable/spin_bg"
                                 android:textColor="@android:color/black"
                                 android:text="Wrongs"/>
 
-                            <View
-                                android:layout_width="2dp"
-                                android:layout_height="match_parent"
-                                android:layout_marginStart="2dp"
-                                android:layout_marginEnd="2dp"
-                                android:background="#000000" />
 
                             <TextView
                                 android:layout_width="match_parent"
@@ -591,6 +565,7 @@
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:textSize="20sp"
+                                android:background="@drawable/spin_bg"
                                 android:textColor="@android:color/black"
                                 android:text="Percent"/>
                         </TableRow>
