--- a/app/src/main/res/layout-large/activity_test.xml
+++ b/app/src/main/res/layout-large/activity_test.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:id="@+id/parent"
     tools:context="com.digywood.tms.PracticeTestActivity">
 
     <RelativeLayout
@@ -28,14 +29,13 @@
             android:id="@+id/question_scroll"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginEnd="5dp"
             android:layout_gravity="center|center_horizontal|center_vertical"
+            android:layout_marginEnd="5dp"
             android:layout_toEndOf="@+id/sections"
             android:layout_toStartOf="@+id/fullscreen"
-            android:orientation="horizontal"
+            android:alpha="1"
             android:background="@color/black_overlay"
-            android:alpha="1">
-        </android.support.v7.widget.RecyclerView>
+            android:orientation="horizontal"></android.support.v7.widget.RecyclerView>
 
         <ImageView
             android:id="@+id/fullscreen"
