--- a/app/src/main/res/layout/activity_testitem.xml
+++ b/app/src/main/res/layout/activity_testitem.xml
@@ -69,15 +69,15 @@
             <LinearLayout
                 android:id="@+id/row2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:weightSum="2">
 
                 <LinearLayout
                     android:id="@+id/row_practice"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
                     android:layout_marginEnd="5dp"
+                    android:layout_weight="1"
                     android:orientation="vertical">
 
                     <LinearLayout
@@ -88,14 +88,14 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/btn_details_bg"
-                            android:text="Practice Test"
                             android:layout_margin="2dp"
+                            android:background="@drawable/btn_details_bg"
                             android:gravity="center"
                             android:padding="3dp"
-                            android:textStyle="italic|bold"
+                            android:text="Practice Test"
+                            android:textColor="#FFFFFF"
                             android:textSize="12sp"
-                            android:textColor="#FFFFFF"/>
+                            android:textStyle="italic|bold" />
 
                         <TextView
                             android:id="@+id/tv_testAttempt"
@@ -197,10 +197,10 @@
                         android:weightSum="3">
 
                         <LinearLayout
+                            android:id="@+id/ll_start"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:id="@+id/ll_start"
                             android:orientation="horizontal">
 
                             <ImageView
@@ -220,10 +220,10 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/ll_resume"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:id="@+id/ll_resume"
                             android:orientation="horizontal">
 
                             <ImageView
@@ -231,8 +231,8 @@
                                 android:layout_width="30dp"
                                 android:layout_height="30dp"
                                 android:layout_gravity="center"
-                                android:src="@drawable/resume"
-                                android:foreground="@drawable/option_locked_overlay"/>
+                                android:foreground="@drawable/option_locked_overlay"
+                                android:src="@drawable/resume" />
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -243,10 +243,10 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/ll_review"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:id="@+id/ll_review"
                             android:orientation="horizontal">
 
                             <ImageView
@@ -255,7 +255,7 @@
                                 android:layout_height="30dp"
                                 android:layout_gravity="center"
                                 android:foreground="@drawable/option_locked_overlay"
-                                android:src="@drawable/review"/>
+                                android:src="@drawable/review" />
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -406,6 +406,8 @@
                             android:id="@+id/iv_fstart"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginBottom="5dp"
                             android:layout_gravity="center"
                             android:layout_marginEnd="2dp"
                             android:src="@drawable/play" />
