--- a/app/src/main/res/layout/activity_db.xml
+++ b/app/src/main/res/layout/activity_db.xml
@@ -11,18 +11,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:weightSum="10"
         android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical|center_horizontal"
-            android:layout_weight="1.5">
+            android:layout_weight="2">
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/dash_tablayout"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 app:tabTextColor="@color/white"
                 app:tabSelectedTextColor="@color/colorPrimary"
                 app:tabIndicatorColor="@color/colorPrimary"
@@ -35,11 +36,11 @@
         <Button
             android:id="@+id/btn_mylearnings"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="25dp"
             android:layout_margin="3dp"
-            android:layout_weight="8.5"
+            android:layout_weight="8"
             android:text="My Courses"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:textStyle="bold"
             android:background="@drawable/btn_details_bg"
             android:textColor="#FFFFFF"
