--- a/app/src/main/res/layout/activity_enrollitem.xml
+++ b/app/src/main/res/layout/activity_enrollitem.xml
@@ -138,7 +138,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:weightSum="10"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -168,6 +168,11 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_margin="2dp"
                     android:layout_weight="3.8">
 
@@ -178,7 +183,7 @@
                         android:layout_marginRight="5dp"
                         android:textColor="@color/green"
                         android:gravity="center_vertical"
-                        android:textSize="14sp"/>
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/tv_activateddate"
@@ -186,7 +191,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:textColor="#000000"
-                        android:textSize="12sp"/>
+                        android:textSize="12sp" />
 
                 </LinearLayout>
 
@@ -203,7 +208,7 @@
                         android:text="End Date"
                         android:textColor="@color/green"
                         android:gravity="center_vertical"
-                        android:textSize="14sp"/>
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/tv_enddate"
@@ -211,11 +216,13 @@
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:textColor="#000000"
-                        android:textSize="12sp"/>
+                        android:textSize="12sp" />
 
                 </LinearLayout>
-
             </LinearLayout>
+
+
+        </LinearLayout>
 
         </LinearLayout>
 
