--- a/app/src/main/res/layout/activity_testitem.xml
+++ b/app/src/main/res/layout/activity_testitem.xml
@@ -7,9 +7,8 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:padding="1dp"
-        app:cardElevation="5dp"
+        android:layout_height="110dp"
+        app:cardElevation="2dp"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
@@ -18,7 +17,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="top"
             android:orientation="vertical"
-            android:padding="6dp">
+            android:padding="2dp">
 
             <LinearLayout
                 android:id="@+id/row_header"
@@ -29,40 +28,41 @@
 
                 <ImageView
                     android:id="@+id/iv_history"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_gravity="center"
                     android:src="@drawable/ic_history_black_36dp" />
 
                 <TextView
                     android:id="@+id/tv_testid"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:hint="testid"
                     android:textColor="@color/green"
-                    android:textSize="20dp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_teststatus"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginEnd="8dp"
                     android:gravity="center"
                     android:text="status" />
 
                 <ImageView
                     android:id="@+id/iv_download"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
                     android:src="@drawable/ic_file_download_black_36dp" />
 
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
+                android:layout_height="1dp"
                 android:layout_gravity="center"
                 android:background="@android:color/darker_gray" />
 
@@ -99,14 +99,14 @@
 
                         <TextView
                             android:id="@+id/tv_testAttempt"
-                            android:layout_width="28dp"
-                            android:layout_height="28dp"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
                             android:layout_gravity="center"
                             android:layout_marginEnd="5sp"
                             android:background="@drawable/number_skipped"
                             android:gravity="center"
                             android:textColor="@color/white"
-                            android:textSize="12sp" />
+                            android:textSize="10sp" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -127,7 +127,7 @@
                                     android:layout_marginEnd="8dp"
                                     android:gravity="center_horizontal|top"
                                     android:text="Max:"
-                                    android:textSize="15sp" />
+                                    android:textSize="12sp" />
 
                                 <TextView
                                     android:id="@+id/tv_attempt_max"
@@ -135,7 +135,7 @@
                                     android:layout_height="wrap_content"
                                     android:gravity="center_horizontal|top"
                                     android:textColor="@color/green"
-                                    android:textSize="15sp" />
+                                    android:textSize="12sp" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -149,7 +149,7 @@
                                     android:layout_marginEnd="8dp"
                                     android:gravity="center_horizontal|top"
                                     android:text="Avg:"
-                                    android:textSize="15sp" />
+                                    android:textSize="12sp" />
 
                                 <TextView
                                     android:id="@+id/tv_attempt_avg"
@@ -157,7 +157,7 @@
                                     android:layout_height="wrap_content"
                                     android:gravity="center_horizontal|top"
                                     android:textColor="@color/green"
-                                    android:textSize="15sp" />
+                                    android:textSize="12sp" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -171,7 +171,7 @@
                                     android:layout_marginEnd="8dp"
                                     android:gravity="center_horizontal|top"
                                     android:text="Min:"
-                                    android:textSize="15sp" />
+                                    android:textSize="12sp" />
 
                                 <TextView
                                     android:id="@+id/tv_attempt_min"
@@ -179,7 +179,7 @@
                                     android:layout_height="wrap_content"
                                     android:gravity="center_horizontal|top"
                                     android:textColor="@color/green"
-                                    android:textSize="15sp" />
+                                    android:textSize="12sp" />
                             </LinearLayout>
 
 
@@ -231,7 +231,6 @@
                                 android:layout_width="30dp"
                                 android:layout_height="30dp"
                                 android:layout_gravity="center"
-                                android:foreground="@drawable/option_locked_overlay"
                                 android:src="@drawable/resume" />
 
                             <TextView
@@ -254,7 +253,6 @@
                                 android:layout_width="30dp"
                                 android:layout_height="30dp"
                                 android:layout_gravity="center"
-                                android:foreground="@drawable/option_locked_overlay"
                                 android:src="@drawable/review" />
 
                             <TextView
@@ -276,8 +274,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_marginBottom="15dp"
-                    android:layout_marginTop="15dp"
-                    android:background="@android:color/darker_gray" />
+                    android:layout_marginTop="15dp" />
 
                 <LinearLayout
                     android:id="@+id/row_flash"
@@ -306,14 +303,14 @@
 
                         <TextView
                             android:id="@+id/tv_flashAttempt"
-                            android:layout_width="28dp"
-                            android:layout_height="28dp"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
                             android:layout_gravity="center"
                             android:layout_marginEnd="5sp"
                             android:background="@drawable/number_skipped"
                             android:gravity="center"
                             android:textColor="@color/white"
-                            android:textSize="12sp" />
+                            android:textSize="10sp" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -334,7 +331,7 @@
                                     android:layout_marginEnd="8dp"
                                     android:gravity="center_horizontal|top"
                                     android:text="Max:"
-                                    android:textSize="15sp" />
+                                    android:textSize="12sp" />
 
                                 <TextView
                                     android:id="@+id/tv_flash_max"
@@ -342,7 +339,7 @@
                                     android:layout_height="wrap_content"
                                     android:gravity="center_horizontal|top"
                                     android:textColor="@color/green"
-                                    android:textSize="15sp" />
+                                    android:textSize="12sp" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -356,7 +353,7 @@
                                     android:layout_marginEnd="8dp"
                                     android:gravity="center_horizontal|top"
                                     android:text="Avg:"
-                                    android:textSize="15sp" />
+                                    android:textSize="12sp" />
 
                                 <TextView
                                     android:id="@+id/tv_flash_avg"
@@ -364,7 +361,7 @@
                                     android:layout_height="wrap_content"
                                     android:gravity="center_horizontal|top"
                                     android:textColor="@color/green"
-                                    android:textSize="15sp" />
+                                    android:textSize="12sp" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -378,7 +375,7 @@
                                     android:layout_marginEnd="8dp"
                                     android:gravity="center_horizontal|top"
                                     android:text="Min:"
-                                    android:textSize="15sp" />
+                                    android:textSize="12sp" />
 
                                 <TextView
                                     android:id="@+id/tv_flash_min"
@@ -386,7 +383,7 @@
                                     android:layout_height="wrap_content"
                                     android:gravity="center_horizontal|top"
                                     android:textColor="@color/green"
-                                    android:textSize="15sp" />
+                                    android:textSize="12sp" />
                             </LinearLayout>
 
 
