--- a/app/src/main/res/layout/optionslist.xml
+++ b/app/src/main/res/layout/optionslist.xml
@@ -5,42 +5,39 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
         android:id="@+id/option_layout">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:id="@+id/ll_rb_wrapper">
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:id="@+id/rb_option"/>
-        </LinearLayout>
+
+        <RadioButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:id="@+id/rb_option"/>
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/ll_rb_wrapper"
-            android:id="@+id/fl_img_wrapper">
-            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/iv_opmedia"
-                android:layout_toEndOf="@+id/rb_option" />
+                android:id="@+id/fl_img_wrapper"
+                >
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:id="@+id/iv_opmedia"
+                    android:layout_toEndOf="@+id/rb_option" />
         </FrameLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="#000000"
-            android:layout_below="@+id/fl_img_wrapper" />
+    </LinearLayout>
 
-    </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#a4a3a3"
+        />
 
 </android.support.constraint.ConstraintLayout>
