--- a/app/src/main/res/layout/popup_screen.xml
+++ b/app/src/main/res/layout/popup_screen.xml
@@ -33,7 +33,7 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true">
 
-        <Button android:id="@+id/close_button"
+        <Button android:id="@+id/pop_close_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/custom_button"
