--- a/app/src/main/res/layout/reviewscreen.xml
+++ b/app/src/main/res/layout/reviewscreen.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="900dp"
-    android:layout_height="450dp"
+    android:layout_width="680dp"
+    android:layout_height="340dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
@@ -14,8 +14,8 @@
 
     <ImageButton
         android:id="@+id/img_left_arrow"
-        android:layout_width="50sp"
-        android:layout_height="100sp"
+        android:layout_width="40sp"
+        android:layout_height="80sp"
         android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/img_right_arrow"
         android:background="@drawable/left_navigate"
@@ -23,20 +23,20 @@
 
     <ImageButton
         android:id="@+id/img_right_arrow"
-        android:layout_width="50sp"
-        android:layout_height="100sp"
+        android:layout_width="40sp"
+        android:layout_height="80sp"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/iv_close"
-        android:layout_marginTop="154dp"
+        android:layout_marginTop="110dp"
         android:background="@drawable/right_navigate"
         app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_close_black_24dp"
-        android:layout_marginTop="10dp"
+        android:src="@drawable/ic_close"
+        android:layout_marginBottom="10dp"
         android:layout_marginEnd="10dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:id="@+id/iv_close"/>
 </RelativeLayout>
