--- a/app/src/main/res/layout/singlescreen.xml
+++ b/app/src/main/res/layout/singlescreen.xml
@@ -1,24 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="900dp"
-    android:layout_height="450dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/layout_img"
-        android:contentDescription="@string/dummy_content"
-        android:scaleType="fitXY"/>
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/layout_img"
+            android:scaleType="fitXY"
+            />
 
+    </ScrollView>
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_close_black_24dp"
-        android:layout_marginTop="10dp"
+        android:src="@drawable/ic_close"
+        android:layout_marginBottom="10dp"
         android:layout_marginEnd="10dp"
         android:contentDescription="@string/dummy_content"
         android:layout_alignParentEnd="true"
-        android:id="@+id/iv_close"/>
+        android:layout_alignParentBottom="true"
+        android:id="@+id/iv_close" />
 </RelativeLayout>
