--- a/app/src/main/res/layout-large/activity_testitem.xml
+++ b/app/src/main/res/layout-large/activity_testitem.xml
@@ -34,8 +34,19 @@
                     android:src="@drawable/ic_history_black_36dp" />
 
                 <TextView
+                    android:id="@+id/tv_NoOfQues"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center"
+                    android:hint="No.Ques:"
+                    android:textColor="@color/green"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+
+                <TextView
                     android:id="@+id/tv_testid"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
@@ -62,7 +73,7 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
+                android:layout_height="1dp"
                 android:layout_gravity="center"
                 android:background="@android:color/darker_gray" />
 
