--- a/app/src/main/res/layout/activity_testitem.xml
+++ b/app/src/main/res/layout/activity_testitem.xml
@@ -32,6 +32,16 @@
                     android:layout_height="25dp"
                     android:layout_gravity="center"
                     android:src="@drawable/ic_history_black_36dp" />
+                <TextView
+                    android:id="@+id/tv_NoOfQues"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center"
+                    android:hint="No.Ques:"
+                    android:textColor="@color/green"
+                    android:textSize="14dp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_testid"
