--- a/app/src/main/res/layout-large/singlescreen.xml
+++ b/app/src/main/res/layout-large/singlescreen.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:weightSum="1">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="1000dp"
+            android:layout_height="500dp"
             android:id="@+id/layout_img"
             android:scaleType="fitXY" />
+        </LinearLayout>
+
     </ScrollView>
 
     <ImageView
