--- a/app/src/main/res/layout/activity_listof_servers.xml
+++ b/app/src/main/res/layout/activity_listof_servers.xml
@@ -4,17 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListofServers">
+    android:orientation="vertical"
+    tools:context=".ListofServers"
+    android:weightSum="10">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="1.5">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_serverlist"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:scrollbars="vertical"
             >
         </android.support.v7.widget.RecyclerView>
@@ -29,6 +32,12 @@
             android:visibility="gone"
             />
 
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="8.5">
         <Button
             android:id="@+id/btn_setserver"
             android:layout_width="wrap_content"
@@ -39,7 +48,6 @@
             android:textStyle="bold"
             android:textColor="@color/white"
             android:background="@drawable/btn_details_bg"/>
-
     </LinearLayout>
 
 </LinearLayout>
