--- a/app/src/main/res/layout-large/activity_assessmenttest.xml
+++ b/app/src/main/res/layout-large/activity_assessmenttest.xml
@@ -116,16 +116,28 @@
             android:textSize="15sp"
             android:textColor="@android:color/black"
             android:layout_toEndOf="@+id/tv_Question_no_label" />
-        <android.support.design.widget.FloatingActionButton
+
+        <ImageView
             android:id="@+id/menu"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_toStartOf="@id/time_layout"
+            android:visibility="visible"
+            app:srcCompat="@drawable/ic_info_black_24dp" />
+
+        <ImageView
+            android:id="@+id/areport"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginEnd="10dp"
-            android:layout_toStartOf="@+id/time_layout"
-            app:backgroundTint="@android:color/holo_blue_dark"
-            app:srcCompat="@drawable/downarrow_white" />
+            android:layout_marginTop="3dp"
+            android:layout_toStartOf="@id/menu"
+            android:visibility="visible"
+            app:srcCompat="@drawable/ic_report" />
 
         <LinearLayout
             android:id="@+id/time_layout"
