--- a/app/src/main/res/layout-xlarge/activity_test.xml
+++ b/app/src/main/res/layout-xlarge/activity_test.xml
@@ -5,112 +5,175 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:id="@+id/parent"
     tools:context="com.digywood.tms.PracticeTestActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:background="#8e58d1"
         android:id="@+id/header">
+
         <Spinner
             android:id="@+id/sections"
-            android:layout_width="220dp"
+            android:layout_width="120dp"
             android:layout_height="40dp"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center_vertical"
-            android:theme="@style/Widget.AppCompat.Spinner"
-            android:background="@drawable/spinner_shape">
+            android:layout_marginTop="5dp"
+            android:backgroundTint="@color/white"
+            android:layout_gravity="center_vertical">
         </Spinner>
 
-        <HorizontalScrollView
-            android:id="@+id/scroll"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/question_scroll"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="5dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center|center_horizontal|center_vertical"
+            android:layout_marginEnd="5dp"
             android:layout_toEndOf="@+id/sections"
             android:layout_toStartOf="@+id/fullscreen"
-            android:background="#708090">
+            android:alpha="1"
+            android:background="@color/black_overlay"
+            android:orientation="horizontal"></android.support.v7.widget.RecyclerView>
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/question_scroll"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:gravity="center"
-                android:orientation="horizontal">
-            </android.support.v7.widget.RecyclerView>
-
-        </HorizontalScrollView>
         <ImageView
             android:id="@+id/fullscreen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentEnd="true"
+            android:contentDescription="@string/dummy_content"
             app:srcCompat="@drawable/ic_fullscreen_black_24dp" />
 
     </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:id="@+id/row2"
-        android:layout_below="@+id/header"
-        android:weightSum="4">
-        <TextView
+        android:layout_below="@+id/header">
+
+        <Button
+            android:id="@+id/btn_qadditional"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/question_number"
-            android:layout_weight="2.5"
-            android:textSize="20sp"
-            android:gravity="center_horizontal|center"
-            android:text="Question"/>
+            android:clickable="false"
+            android:visibility="visible"
+            android:text="Adl info." />
 
+
+        <Button
+            android:id="@+id/btn_group_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:clickable="false"
+            android:scaleType="center"
+            android:layout_toEndOf="@+id/btn_qadditional"
+            android:layout_marginStart="5dp"
+            android:visibility="visible"
+            android:text="Grp Info." />
+
+        <Button
+            android:id="@+id/btn_review_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:clickable="false"
+            android:scaleType="center"
+            android:layout_toEndOf="@+id/btn_group_info"
+            android:layout_marginStart="5dp"
+            android:visibility="visible"
+            android:text="Rev Info." />
+
+        <!--        <ImageView
+                    android:id="@+id/menu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_toStartOf="@id/time_layout"
+                    android:visibility="visible"
+                    app:srcCompat="@drawable/ic_info_black_40dp" />-->
+        <TextView
+            android:id="@+id/tv_Question_no_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/time_layout"
+            android:layout_marginStart="180sp"
+            android:textSize="15sp"
+            android:textColor="@android:color/black"
+            android:layout_toEndOf="@+id/btn_review_info"
+            android:text="Question no." />
+        <TextView
+            android:id="@+id/tv_Question_no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/time_layout"
+            android:layout_marginStart="10sp"
+            android:textSize="15sp"
+            android:textColor="@android:color/black"
+            android:layout_toEndOf="@+id/tv_Question_no_label" />
         <ImageView
             android:id="@+id/menu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="5dp"
-            app:srcCompat="@drawable/ic_info_black_24dp"
-            android:layout_gravity="end"
-            android:visibility="visible"
-            android:layout_weight="0.5"/>
-
-        <RelativeLayout
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:background="@drawable/spin_bg"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_weight="1">
+            android:scaleType="center"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_toStartOf="@+id/time_layout"
+            android:visibility="visible"
+            app:srcCompat="@drawable/ic_info_black_24dp" />
+
+        <ImageView
+            android:id="@+id/report"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:scaleType="center"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="3dp"
+            android:layout_toStartOf="@id/menu"
+            android:visibility="visible"
+            app:srcCompat="@drawable/ic_report" />
+
+
+
+        <LinearLayout
+            android:id="@+id/time_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="5dp"
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_marginEnd="5dp">
 
             <ImageView
                 android:id="@+id/timer_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingStart="5dp"
-                android:layout_gravity="center_vertical"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
+                android:gravity="center_vertical|center_horizontal"
                 app:srcCompat="@drawable/ic_timer_black_24dp" />
 
             <TextView
                 android:id="@+id/timer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="5dp"
+                android:gravity="center_vertical"
+                android:layout_gravity="center_vertical"
                 android:textColor="@color/colorPrimary"
-                android:layout_marginTop="1dp"
-                android:layout_marginBottom="5dp"
-                android:layout_toEndOf="@+id/timer_icon"
-                android:textSize="28sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
-        </RelativeLayout>
+        </LinearLayout>
 
-
-    </LinearLayout>
+    </RelativeLayout>
 
     <View
         android:id="@+id/margin"
@@ -132,102 +195,51 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:layout_weight="1">
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="180dp"
+                android:layoutAnimation="@anim/layout_animation_falldown"
                 android:orientation="vertical">
+
                 <ImageView
                     android:id="@+id/question_img"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="fitXY"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
                     android:gravity="start" />
 
-                <android.support.design.widget.FloatingActionButton
-                    android:id="@+id/question_Data"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:layout_marginTop="5dp"
-                    android:layout_gravity="center"
-                    android:visibility="invisible"
-                    android:elevation="5dp"
-                    app:srcCompat="@drawable/ic_input_24dp" />
+                <View
+                    android:layout_width="2dp"
+                    android:layout_height="match_parent"
+                    android:background="#000000"
+                    android:id="@+id/view" />
 
-            </LinearLayout>
+            </RelativeLayout>
 
         </ScrollView>
 
-        <ScrollView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1">
 
-            <RadioGroup
-                android:id="@+id/group"
+            <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical">
+                android:id="@+id/option_view">
 
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=""
-                    android:elevation="3dp"
-                    android:id="@+id/op1"/>
+            </android.support.v7.widget.RecyclerView>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="#000000"
-                    android:layout_marginTop="5dp" />
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text=""
-                    android:elevation="3dp"
-                    android:id="@+id/op2"/>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="#000000"
-                    android:layout_marginTop="5dp" />
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text=""
-                    android:elevation="3dp"
-                    android:id="@+id/op3" />
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="#000000"
-                    android:layout_marginTop="5dp" />
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text=""
-                    android:elevation="3dp"
-                    android:id="@+id/op4" />
-
-            </RadioGroup>
-        </ScrollView>
+        </LinearLayout>
 
     </LinearLayout>
 
-<!--    <View
+    <View
         android:id="@+id/margin2"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="#000000"
-        android:layout_below="@+id/question_screen" />-->
+        android:layout_below="@+id/question_screen" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -235,57 +247,64 @@
         android:orientation="horizontal"
         android:id="@+id/action_buttons"
         android:layout_alignParentBottom="true"
-        android:weightSum="3">
+        android:weightSum="5">
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_weight="1"
-            android:background="#703fb5"
-            android:text="Previous"
-            android:textColor="#FFFFFF"
+            android:background="@drawable/test_button_custom"
+            android:textColor="@drawable/test_text_custom"
+            android:text="Back"
+            android:layout_marginEnd="5dp"
+            android:drawablePadding="0dp"
+            android:drawableStart="@drawable/ic_arrow_back_24dp"
+            android:paddingEnd="5dp"
             android:id="@+id/prev_btn"/>
-        <LinearLayout
+
+        <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_vertical"
+            android:layout_height="50dp"
             android:layout_weight="1"
-            android:weightSum="7">
+            android:text="Clear Options"
+            android:background="@drawable/test_navigation_custom"
+            android:textColor="@drawable/test_navigation_text"
+            android:layout_marginEnd="5dp"
+            android:id="@+id/btn_clear_option"/>
 
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="Unbark"
-                android:layout_weight="3"
-                android:textColor="#000000"
-                android:gravity="center"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:text="Mark"
+            android:layout_marginEnd="5dp"
+            android:background="@drawable/test_button_custom"
+            android:textColor="@drawable/test_navigation_text"
+            android:id="@+id/btn_mark"/>
 
-            <Switch
-                android:id="@+id/mark_switch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_weight="1" />
-
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="Bark"
-                android:layout_weight="3"
-                android:textColor="#000000"
-                android:gravity="center"/>
-        </LinearLayout>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:text="Confirm"
+            android:layout_marginEnd="5dp"
+            android:background="#e0b34a"
+            android:textColor="@android:color/black"
+            android:id="@+id/btn_confirm"/>
 
         <Button
             android:id="@+id/next_btn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_weight="1"
-            android:background="#703fb5"
-            android:text="Next"
-            android:textColor="#FFFFFF" />
+            android:background="@drawable/test_button_custom"
+            android:textColor="@drawable/test_text_custom"
+            android:drawableEnd="@drawable/ic_arrow_forward_24dp"
+            android:drawablePadding="0dp"
+            android:text="Next" />
 
     </LinearLayout>
+
+
 
 </RelativeLayout>
