--- a/app/src/main/res/layout/activity_assessmenttest.xml
+++ b/app/src/main/res/layout/activity_assessmenttest.xml
@@ -99,6 +99,17 @@
                 android:visibility="visible"
                 app:srcCompat="@drawable/ic_info_black_24dp" />
 
+            <ImageView
+                android:id="@+id/areport"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="3dp"
+                android:layout_toStartOf="@id/menu"
+                android:visibility="visible"
+                app:srcCompat="@drawable/ic_report" />
+
             <LinearLayout
                 android:id="@+id/time_layout"
                 android:layout_width="wrap_content"
