--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -77,22 +77,22 @@
                 android:visibility="visible"
                 android:text="Grp Info." />
 
-        <Button
-            android:id="@+id/btn_review_info"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:layout_gravity="center"
-            android:clickable="false"
-            android:scaleType="center"
-            android:layout_toEndOf="@+id/btn_group_info"
-            android:layout_marginStart="5dp"
-            android:visibility="visible"
-            android:text="Rev Info." />
+            <Button
+                android:id="@+id/btn_review_info"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:layout_gravity="center"
+                android:clickable="false"
+                android:scaleType="center"
+                android:layout_toEndOf="@+id/btn_group_info"
+                android:layout_marginStart="5dp"
+                android:visibility="visible"
+                android:text="Rev Info." />
 
             <ImageView
                 android:id="@+id/menu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_gravity="end"
                 android:layout_marginEnd="10dp"
                 android:layout_marginTop="5dp"
@@ -100,10 +100,21 @@
                 android:visibility="visible"
                 app:srcCompat="@drawable/ic_info_black_24dp" />
 
-            <LinearLayout
-                android:id="@+id/time_layout"
+            <ImageView
+                android:id="@+id/report"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="3dp"
+                android:layout_toStartOf="@id/menu"
+                android:visibility="visible"
+                app:srcCompat="@drawable/ic_report" />
+
+            <LinearLayout
+                android:id="@+id/time_layout"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_alignParentEnd="true"
                 android:gravity="center"
                 android:layout_marginEnd="5dp">
