--- a/app/src/main/res/layout-xlarge/activity_test.xml
+++ b/app/src/main/res/layout-xlarge/activity_test.xml
@@ -126,7 +126,7 @@
             android:layout_marginTop="5dp"
             android:layout_toStartOf="@+id/time_layout"
             android:visibility="visible"
-            app:srcCompat="@drawable/ic_info_black_24dp" />
+            app:srcCompat="@drawable/ic_power_icon" />
 
         <ImageView
             android:id="@+id/report"
@@ -195,7 +195,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:layout_weight="1">
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:layoutAnimation="@anim/layout_animation_falldown"
@@ -214,14 +214,26 @@
                     android:background="#000000"
                     android:id="@+id/view" />
 
-            </RelativeLayout>
+            </LinearLayout>
 
         </ScrollView>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <com.google.android.gms.ads.AdView
+                xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/banner_home_footer">
+
+            </com.google.android.gms.ads.AdView>
 
             <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
