--- a/app/src/main/res/layout/activity_assessmenttest.xml
+++ b/app/src/main/res/layout/activity_assessmenttest.xml
@@ -207,7 +207,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical"
             android:layout_weight="1">
+
 
             <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
