--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -16,10 +16,11 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:gravity="center_horizontal"
-            android:textColor="@color/red"
-            android:text="SCORECARD" />
+            android:textColor="@android:color/holo_red_dark"
+            android:textStyle="bold"
+            android:text="SCORE CARD" />
     </LinearLayout>
 
     <ScrollView
@@ -158,7 +159,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
-                            android:text="Attempted: "
+                            android:text="Conformed: "
                             android:textColor="@android:color/black"
                             android:textSize="12sp" />
 
@@ -407,69 +408,60 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/division"
                     android:orientation="vertical">
+
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="2dp"
-                        android:background="@color/black_overlay"/>
+                        android:layout_marginBottom="2dp"
+                        android:layout_marginTop="2dp"
+                        android:background="#000000" />
+
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center">
 
-                        android:orientation="horizontal">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
+                        <TextView
+                            android:id="@+id/tv_totalScore_label"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:id="@+id/tv_totalScore_label"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="10dp"
-                                android:text="Total Score : "
-                                android:textColor="@android:color/black"
-                                android:textSize="12sp"
-                                android:textStyle="bold" />
+                            android:layout_marginStart="10dp"
+                            android:text="Total Score : "
+                            android:textColor="@android:color/black"
+                            android:textSize="12sp"
+                            android:textStyle="bold" />
 
 
-                            <TextView
-                                android:id="@+id/tv_totalScore"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="10dp"
-                                android:textColor="@android:color/black"
-                                android:textSize="12sp" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
+                        <TextView
+                            android:id="@+id/tv_totalScore"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:orientation="horizontal">
+                            android:layout_marginStart="10dp"
+                            android:textColor="@android:color/holo_red_dark"
+                            android:textStyle="bold"
+                            android:textSize="12sp" />
 
-                            <TextView
-                                android:id="@+id/tv_totalPercentage_label"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="10dp"
-                                android:text="Total Percentage : "
-                                android:textColor="@android:color/black"
-                                android:textSize="12sp"
-                                android:textStyle="bold" />
+                        <TextView
+                            android:id="@+id/tv_totalPercentage_label"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="50dp"
+                            android:text="Total Percentage : "
+                            android:textColor="@android:color/black"
+                            android:textSize="12sp"
+                            android:textStyle="bold" />
 
 
-                            <TextView
-                                android:id="@+id/tv_totalPercentage"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="10dp"
-                                android:layout_marginTop="5dp"
-                                android:textColor="@android:color/black"
-                                android:textSize="12sp" />
-                        </LinearLayout>
+                        <TextView
+                            android:id="@+id/tv_totalPercentage"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:textColor="@android:color/holo_red_dark"
+                            android:textStyle="bold"
+                            android:textSize="12sp" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -500,6 +492,7 @@
                             android:layout_width="fill_parent"
                             android:layout_height="fill_parent"
                             android:id="@+id/row_header"
+                            android:background="@color/transp_green"
                             android:weightSum="7">
 
                             <TextView
@@ -508,7 +501,6 @@
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:textSize="12sp"
-                                android:background="@drawable/spin_bg"
                                 android:textColor="@android:color/black"
                                 android:text="Section"/>
 
@@ -518,10 +510,8 @@
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:textSize="12sp"
-                                android:background="@drawable/spin_bg"
                                 android:textColor="@android:color/black"
                                 android:text="No.of Q"/>
-
 
                             <TextView
                                 android:layout_width="match_parent"
@@ -529,7 +519,6 @@
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:textSize="12sp"
-                                android:background="@drawable/spin_bg"
                                 android:textColor="@android:color/black"
                                 android:text="Attempt"/>
 
@@ -540,7 +529,6 @@
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:textSize="12sp"
-                                android:background="@drawable/spin_bg"
                                 android:textColor="@android:color/black"
                                 android:text="Skipped"/>
 
@@ -551,7 +539,6 @@
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:textSize="12sp"
-                                android:background="@drawable/spin_bg"
                                 android:textColor="@android:color/black"
                                 android:text="Correct"/>
 
@@ -562,9 +549,9 @@
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:textSize="12sp"
-                                android:background="@drawable/spin_bg"
                                 android:textColor="@android:color/black"
-                                android:text="WrongAns"/>
+                                android:text="InCorrect"/>
+
 
                             <TextView
                                 android:layout_width="match_parent"
@@ -572,13 +559,12 @@
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:textSize="12sp"
-                                android:background="@drawable/spin_bg"
                                 android:textColor="@android:color/black"
                                 android:text="Percent"/>
                         </TableRow>
                         <View
                             android:layout_width="match_parent"
-                            android:layout_height="2dp"
+                            android:layout_height="1.5dp"
                             android:background="#000000" />
                     </TableLayout>
                 </RelativeLayout>
@@ -589,17 +575,28 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:gravity="center_horizontal"
+        android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal">
+
+        <com.google.android.gms.ads.AdView
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            ads:adSize="BANNER"
+            ads:adUnitId="@string/banner_home_footer">
+
+        </com.google.android.gms.ads.AdView>
 
         <Button
             android:id="@+id/btn_save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/custom_button"
-            android:layout_marginEnd="2dp"
+            android:layout_margin="4dp"
             android:textColor="@drawable/custom_text"
             android:text="OK" />
 
@@ -607,7 +604,7 @@
             android:id="@+id/btn_details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
+            android:layout_margin="4dp"
             android:background="@drawable/custom_button"
             android:textColor="@drawable/custom_text"
             android:text="Details >>" />
