--- a/app/src/main/res/layout-large/activity_main.xml
+++ b/app/src/main/res/layout-large/activity_main.xml
@@ -50,7 +50,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:background="@drawable/custom_edittext"
-                    android:hint="Number"
+                    android:hint="Mobile Number"
                     android:inputType="number|phone" />
 
                 <!-- Password Label -->
@@ -76,6 +76,16 @@
                     android:textColor="#000000"
                     android:text="Remember"/>
 
+                <TextView
+                    android:id="@+id/txt_forgot_pwd"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/forgotpwd1"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold|italic"
+                    android:gravity="right"
+                    android:layout_marginRight="10dp"/>
+
                 <Button
                     android:id="@+id/btn_login"
                     android:layout_width="match_parent"
@@ -86,15 +96,16 @@
                     android:padding="12dp"
                     android:text="Login"/>
 
-                <TextView android:id="@+id/tv_signup"
+                <TextView
+                    android:id="@+id/tv_signup"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorPrimaryDark"
                     android:layout_margin="20dp"
-                    android:text="No account yet? Create one"
                     android:gravity="center"
-                    android:textSize="16dip"/>
+                    android:text="@string/signup"
+                    android:textColor="@android:color/holo_orange_dark"
+                    android:textSize="16dip"
+                    android:textStyle="bold" />
 
             </LinearLayout>
             </android.support.v7.widget.CardView>
