--- a/app/src/main/res/layout-large/activity_registration.xml
+++ b/app/src/main/res/layout-large/activity_registration.xml
@@ -142,6 +142,23 @@
                 android:hint="password" />
         </android.support.design.widget.TextInputLayout>
 
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            app:hintEnabled="false"
+            app:passwordToggleEnabled="true">
+            <EditText android:id="@+id/et_cnf_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:theme="@style/EditTextTheme"
+                android:background="@drawable/custom_edittext"
+                android:inputType="textPassword"
+                android:layout_margin="5dp"
+                android:maxLength="50"
+                android:hint="Confirm Password" />
+        </android.support.design.widget.TextInputLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
