--- a/app/src/main/res/layout/activity_enroll_request.xml
+++ b/app/src/main/res/layout/activity_enroll_request.xml
@@ -92,7 +92,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_gravity="center_vertical|center_horizontal"
-                android:text="Request Enrollment" />
+                android:text="Request Enrolment" />
 
         </LinearLayout>
 
